<resources>
    <string name="app_name">SmsControl</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark mode</string>
    <string name="dark_mode_summary">Change the color palette</string>
    <string name="feedback">Send feedback</string>
    <string name="feedback_summary">Report technical issues or suggest new features</string>
    <string name="about">About</string>
    <string name="about_summary">Show application information</string>
    <string name="security_code">Security Code</string>
    <string name="security_code_summary">code that will be checked for incoming messages</string>
    <string name="commands">Commands</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="wifi_category">WiFi</string>
    <string name="wifi_state_on">Set WiFi On</string>
    <string name="wifi_state_off">Set wifi Off</string>
    <string name="mobile_data_category">Mobile Data</string>
    <string name="mobile_data_on">Set mobile On</string>
    <string name="mobile_data_off">Set mobile Off</string>
    <string name="sound_category">Sound</string>
    <string name="sound_on">Set sound volume to 100%</string>
    <string name="sound_off">Set sound volume to 0%</string>
    <string name="sound_play">Play selected sound</string>
    <string name="set_sound_to_play">select the sound that should be played</string>
    <string name="set_sound_level">Set sound volume</string>
    <string name="other_category">Other</string>
    <string name="run_app">Run selected app</string>
    <string name="select_app_to_run">Select app to run</string>
    <string name="command_list">Send command list</string>
    <string name="root_category">Root Commands</string>
    <string name="restart">Restart</string>
    <string name="shutdown">Shutdown</string>
    <string name="location">Current location</string>
    <string name="sms_control_status">SmsControl runs in the background</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="understand">I understand</string>
    <string name="cancel">Cancel</string>
    <string name="sms_permission_info">In order for this application to work, you must grant permission to receive and read sms messages</string>
    <string name="sms_permission_denied">Application will not work properly until you grant permissions</string>
    <string name="activity_not_found">No email application found</string>
    <string name="all_commands_disabled">All commands are disabled</string>
    <string name="start_app_error">Selected application failed to start</string>
    <string name="start_app_not_selected">You must select the application you want to run</string>
    <string name="root_needed">This command requires root privileges. If your phone is rooted, grant SmsControl permission to use this command\nYou can do this in settings</string>
    <string name="root">Root</string>
    <string name="grant_root">Grant root permission</string>
    <string name="root_granted">ACCESS GRANTED</string>
    <string name="root_denied">ACCESS DENIED</string>
    <string name="unexpected_error">Unexpected error occurred</string>
    <string name="mobile_data_permission_info">In order for this application to work, you must grant permission to read phone state</string>
    <string name="permission_denied">This command will not work until you grant permissions</string>
    <string name="send_sms_info">This command requires SEND SMS privileges.\nPermission will be used to send the list of commands to the sender\'s number</string>
    <string name="send_sms_get_info">This command requires SEND SMS privileges.\nPermission will be used to send information about phone to the sender\'s number</string>
    <string name="location_permission_info">This command require LOCATION permission to get your phone location.
        \nFor this command to perform its task, you must have location enabled!!
        \n\nIf you grant ROOT access, it will try to turn your GPS on and get your localization even if it\'s disabled.
        \n\nIf all the above options are not available, the last known location will be taken (if available)</string>
    <string name="getting_location">Getting localization…</string>
    <string name="playing_music">Playing music…</string>
    <string name="location_not_available">The location could not be determined</string>
    <string name="bluetooth_category">Bluetooth</string>
    <string name="bluetooth_on">Set Bluetooth On</string>
    <string name="bluetooth_off">Set Bluetooth Off</string>
    <string name="sync_category">Synchronization</string>
    <string name="sync_on">Set synchronization On</string>
    <string name="sync_off">Set synchronization Off</string>
    <string name="get_info">Get information about phone</string>
    <string name="log">Logs</string>
    <string name="log_summary">Check log from received message</string>
    <string name="clear_logs">Clear logs</string>
    <string name="empty_log_file">EMPTY LOG FILE</string>
    <string name="error_read_logs">"ERROR, I CANT READ LOG FILE :/"</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="power_saver">Set by Battery Saver</string>
    <string name="system_default">System default</string>
    <string name="blacklist">Blacklist</string>
    <string name="blacklist_summary">List of numbers from which messages will be ignored</string>
    <string name="warn_message_blacklist">Are you sure you want to delete \'%1$s\' number from blacklist?</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="add">Add</string>
    <string name="cant_be_empty">Field can\'t be empty</string>
    <string name="help">Help</string>
    <string name="help_desc_all">The general command pattern is:\n\t\t\t@securityCode command\n\nExample:\n\t\t\t@1234 wifiOn\n\nCommands can occur in two variants:\n 1.Without argument: @1234 wifiOn\n 2.With argument @1234 playSound 10\n\n(Arguments are never required, commands always have default values which will be used when the user doesn\'t set an argument)\n\n<b>Caution!!</b>\nCommand that require root privilege may not work on all devices because android api does not officially support it</string>
    <string name="help_blacklist_message">Messages that come from numbers added to this list will be ignored regardless of whether the message is correct or not</string>
    <string name="help_log_message">Here you can see all actions taken with the help of sms messages</string>
    <string name="clear_logs_warn_message">Are you sure you want to clear all logs?</string>
    <string name="wifi_on_help_desc">Turns on wifi</string>
    <string name="wifi_off_help_desc">Turns off wifi</string>
    <string name="bluetooth_on_help_desc">Turns on bluetooth</string>
    <string name="bluetooth_off_help_desc">Turns off bluetooth</string>
    <string name="sound_on_help_desc">Set sound level (Ringtone and music) to max</string>
    <string name="sound_off_help_desc">Set sound level (Ringtone and music) to 0</string>
    <string name="set_sound_level_help_desc">Determine which sound level suits you, You must add argument for the sound level</string>
    <string name="play_sound_help_desc">Play selected song, if you are not select any song, it will be played default ringtone.\nYou can add additional argument for the time(in seconds) the music should play</string>
    <string name="sync_on_help_desc">Turns on synchronization</string>
    <string name="sync_off_help_desc">Turns off synchronization</string>
    <string name="command_list_help_desc">Sends to the sender of the message the list of commands that are enabled</string>
    <string name="get_info_help_desc">Sends information about the status of the phone and its sensors to the sender of the message</string>
    <string name="location_help_desc">Tries to determine the location of the phone and send it to the sender of the message.\nYou can add additional argument for the time(in seconds) for which the location should be determined</string>
    <string name="run_app_help_desc">Run the application that was previously selected, if no application has been selected, the message will be ignored</string>
    <string name="mobile_data_on_help_desc">Turns on mobile data\n<b>Caution!</b>\nThis command need root privilege</string>
    <string name="mobile_data_off_help_desc">Turns off mobile data\n<b>Caution!</b>\nThis command need root privilege</string>
    <string name="restart_help_desc">Restart your phone\n<b>Caution!</b>\nThis command need root privilege</string>
    <string name="shutdown_help_desc">Shutdown your phone\n<b>Caution!</b>\nThis command need root privilege</string>
    <string name="shutdown_reboot_warn_often">You cannot use this command more often than every 30s</string>
    <string name="space_not_allowed">Space is not allowed!</string>
    <string name="icons_made_by">Icons used in loading screen are made by <a href="https://www.flaticon.com/authors/photo3idea-studio">photo3idea_studio</a> from www.flaticon.com</string>
    <string name="go_to_artist">Show artist page</string>
</resources>