<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        android:key="security_code"
        android:summary="@string/security_code_summary"
        android:title="@string/security_code"
        app:iconSpaceReserved="false"
        app:defaultValue="1234" />
    <PreferenceCategory
        android:title="@string/commands"
        app:iconSpaceReserved="false">
        <PreferenceCategory
            android:title="@string/wifi_category"
            app:iconSpaceReserved="false">
            <com.rejfin.smscontrol.ui.other.CustomPreferenceItem
                android:key="wifi_on"
                app:defaultValue="wifiOn"
                android:title="@string/wifi_state_on"
                app:iconSpaceReserved="false"
                android:layout="@layout/preference_command_layout"
                app:useSimpleSummaryProvider="true"/>
            <com.rejfin.smscontrol.ui.other.CustomPreferenceItem
                android:key="wifi_off"
                app:defaultValue="wifiOff"
                android:title="@string/wifi_state_off"
                app:iconSpaceReserved="false"
                android:layout="@layout/preference_command_layout"
                app:useSimpleSummaryProvider="true"/>
        </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/bluetooth_category"
            app:iconSpaceReserved="false">
            <com.rejfin.smscontrol.ui.other.CustomPreferenceItem
                android:key="bluetooth_on"
                app:defaultValue="bluetoothOn"
                android:title="@string/bluetooth_on"
                app:iconSpaceReserved="false"
                android:layout="@layout/preference_command_layout"
                app:useSimpleSummaryProvider="true"/>
            <com.rejfin.smscontrol.ui.other.CustomPreferenceItem
                android:key="bluetooth_off"
                app:defaultValue="bluetoothOff"
                android:title="@string/bluetooth_off"
                app:iconSpaceReserved="false"
                android:layout="@layout/preference_command_layout"
                app:useSimpleSummaryProvider="true"/>
        </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/sound_category"
            app:iconSpaceReserved="false">
            <com.rejfin.smscontrol.ui.other.CustomPreferenceItem
                android:key="sound_on"
                app:defaultValue="soundOn"
                android:title="@string/sound_on"
                app:iconSpaceReserved="false"
                android:layout="@layout/preference_command_layout"
                app:useSimpleSummaryProvider="true"/>
            <com.rejfin.smscontrol.ui.other.CustomPreferenceItem
                android:key="sound_off"
                app:defaultValue="soundOff"
                android:title="@string/sound_off"
                app:iconSpaceReserved="false"
                android:layout="@layout/preference_command_layout"
                app:useSimpleSummaryProvider="true"/>
            <com.rejfin.smscontrol.ui.other.CustomPreferenceItem
                android:key="sound_level"
                app:defaultValue="setSoundLevel"
                android:title="@string/set_sound_level"
                app:iconSpaceReserved="false"
                android:layout="@layout/preference_command_layout"
                app:useSimpleSummaryProvider="true"/>
            <com.rejfin.smscontrol.ui.other.CustomPreferenceItem
                android:key="sound_play"
                app:defaultValue="playSound"
                android:title="@string/sound_play"
                app:iconSpaceReserved="false"
                android:layout="@layout/preference_command_layout"
                app:useSimpleSummaryProvider="true"/>
            <Preference
                android:key="sound_name"
                android:title="@string/set_sound_to_play"
                app:iconSpaceReserved="false"/>
        </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/other_category"
            app:iconSpaceReserved="false">
            <com.rejfin.smscontrol.ui.other.CustomPreferenceItem
                android:key="command_list"
                app:defaultValue="commandList"
                android:title="@string/command_list"
                app:iconSpaceReserved="false"
                android:layout="@layout/preference_command_layout"
                app:useSimpleSummaryProvider="true"/>
            <com.rejfin.smscontrol.ui.other.CustomPreferenceItem
                android:key="location"
                app:defaultValue="location"
                android:title="@string/location"
                app:iconSpaceReserved="false"
                android:layout="@layout/preference_command_layout"
                app:useSimpleSummaryProvider="true"/>
            <com.rejfin.smscontrol.ui.other.CustomPreferenceItem
                android:key="run_app"
                android:title="@string/run_app"
                app:iconSpaceReserved="false"
                app:defaultValue="runApp"
                android:layout="@layout/preference_command_layout"
                app:useSimpleSummaryProvider="true"/>
            <ListPreference
                android:key="selected_app"
                app:defaultValue="runApp"
                android:title="@string/select_app_to_run"
                app:iconSpaceReserved="false"
                app:useSimpleSummaryProvider="true"/>
        </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/root_category"
            app:iconSpaceReserved="false">
            <PreferenceCategory
                android:title="@string/mobile_data_category"
                app:iconSpaceReserved="false">
                <com.rejfin.smscontrol.ui.other.CustomPreferenceItem
                    android:key="mobile_data_on"
                    app:defaultValue="mobileDataOn"
                    android:title="@string/mobile_data_on"
                    app:iconSpaceReserved="false"
                    android:layout="@layout/preference_command_layout"
                    app:useSimpleSummaryProvider="true"/>
                <com.rejfin.smscontrol.ui.other.CustomPreferenceItem
                    android:key="mobile_data_off"
                    app:defaultValue="mobileDataOff"
                    android:title="@string/mobile_data_off"
                    app:iconSpaceReserved="false"
                    android:layout="@layout/preference_command_layout"
                    app:useSimpleSummaryProvider="true"/>
            </PreferenceCategory>

            <PreferenceCategory
                android:title="@string/other_category"
                app:iconSpaceReserved="false">
                <com.rejfin.smscontrol.ui.other.CustomPreferenceItem
                    android:key="restart"
                    app:defaultValue="restart"
                    android:title="@string/restart"
                    app:iconSpaceReserved="false"
                    android:layout="@layout/preference_command_layout"
                    app:useSimpleSummaryProvider="true"/>
                <com.rejfin.smscontrol.ui.other.CustomPreferenceItem
                    android:key="shutdown"
                    app:defaultValue="shutdown"
                    android:title="@string/shutdown"
                    app:iconSpaceReserved="false"
                    android:layout="@layout/preference_command_layout"
                    app:useSimpleSummaryProvider="true"/>
            </PreferenceCategory>
        </PreferenceCategory>
    </PreferenceCategory>
</PreferenceScreen>